--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,108 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Mulish', sans-serif;
+}
+
+
+.navbar{background-color: #fff !important;}
+
+.navbar-brand{
+  font-size: 1.3rem !important;
+  color: #565387 !important;
+}
+
+.navbar a{
+  text-transform: capitalize !important;
+}
+
+.navbar a:hover{
+  color: #3498db !important;
+}
+
+@media (max-width: 991px){
+.navbar-brand{
+  font-size: 1.5rem !important;
+}
+
+}
+
+.menu_active{
+  font-weight: bold;
+  border-bottom: black;
+}
+
+
+
+/* Main Landing Section */
+
+#header{
+  width: 100%;
+  height: 100vh;
+  margin-top: 50px;
+}
+
+#header h1{
+  margin: 0 0  10px 0;
+  font-size: 40px;
+  font-weight: 700;
+  color: black;
+}
+
+#header .brand-name{
+  color: #3498db;
+}
+
+#header h2{
+  color: #484848;
+font-size: 24px;
+
+}
+
+#header .btn-get-started{
+  border-radius: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 10px 30px;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #3498db;
+  transition: 0.5sec;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
+}
+
+#header .btn-get-started:hover{
+  background-color: #3498db;
+  color: #fff;
+}
+
+#header .animated{
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@-webkit-keyframes up-down{
+  0%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down{
+  0%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(-10px);
+  }
+}
+
+
+.contact-div input{
+  color: red !important;                            ;
 }
